2001-04-20  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k27

	* ntpd/ntp_loopfilter.c (local_clock): Check clock_panic > 0.
	Check clock_max > 0.
	* html/ntpd.htm: Cleanup.
	* html/miscopt.htm: Cleanup.
	* html/confopt.htm: Cleanup minpoll documentation.
	From: Dave Mills.

2001-04-19  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/cmd_args.c (getstartup): check_netinfo needs an extern
	declaration.
	Reported by: Jack Bryans <jbryans@csulb.edu>

	* configure.in (ac_cv_make_timetrim): Added.
	* util/Makefile.am (bin_PROGRAMS): MAKE_TIMETRIM
	Requested by: Jack Bryans <jbryans@csulb.edu>

	* configure.in: 4.0.99k26

	* util/ntp-genkeys.c:
	* ntpd/refclock_oncore.c:
	* ntpd/ntp_peer.c:
	* libntp/msyslog.c:
	* libntp/audio.c:
	Lint cleanup.
	From: Simon Burge <simonb@wasabisystems.com>

	* ntpd/ntp_loopfilter.c (local_clock): debug message improvements
	from Dave Mills.

	* libntp/emalloc.c (emalloc): Tell people we are exiting if we log
	an out-of-memory condition.

	* util/ntp-genkeys.c (main): Don't allow '#' in a generated MD5
	key.  Reported by: Dave Tyson <Dave.Tyson@liverpool.ac.uk>

2001-04-18  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_proto.c (clock_update): minpoll cleanup.
	(clock_select): minpoll cleanup.
	(clock_filter): Bugfixes from Mark Martinec <Mark.Martinec@ijs.si>
	* ntpd/ntp_loopfilter.c (rstclock): minpoll cleanup.  Debug cleanup.
	* ntpd/ntp_config.c (getconfig): Initialize/bounds check minpoll
	using NTP_MINDPOLL insted of sys_minpoll.
	From: Dave Mills.

2001-04-17  Harlan Stenn  <stenn@whimsy.udel.edu>

	* libntp/msyslog.c:
	* ElectricFence/page.c (stringErrorReport): Follow Rainer's lead
	and use strerror().

	* ntpd/refclock_shm.c (shm_start): Always use strerror. 
	* libntp/msyslog.c (msyslog): Use strerror if present. 
	From: Rainer Orth  <ro@TechFak.Uni-Bielefeld.
	
	* ntpd/ntp_config.c (getconfig): Read stratum fudge value into 
	long variable.
	From: Rainer Orth <ro@TechFak.Uni-Bielefeld.DE> 
